fluxcd/apps/base/mollysocket/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mollysocket
  annotations:
    linkerd.io/inject: enabled
